--- a/src/html/pages/inner.html
+++ b/src/html/pages/inner.html
@@ -14,10 +14,10 @@
       <div class="container">
         <section class="header-left">
           <div class="header__menu">
-            <a href="#" class="header__logo">
+            <a href="index.html" class="header__logo">
               <img src="images/logo.png" alt="Logo" />
             </a>
-            <a href="#" class="header__link">Главная</a>
+            <a href="inner.html" class="header__link">Главная</a>
           </div>
         </section>
         <section class="header-right">
