--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="styles/main/main.css" />
     <link rel="stylesheet" href="styles/main/responsive.css" />
-    <title>Document</title>
+    <title>Apoint</title>
   </head>
   <body>
     @@include('../layouts/header.html') @@include('../layouts/modals.html')
